--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
-/* GDT Definir paleta de colores, logos, etc. */
 :root {
-    /* --varcol1: rgb(138, 159, 244); */
-    --varcol1: rgb(243,121,35);
-    /* --varcol2: rgb(0, 180, 255); */
+    /* Paleta de colores */
+    --varcol1: rgb(243, 121, 35);
     --varcol2: rgb(240, 100, 0);
     --varcolfondo: rgb(138, 159, 244, 0.6);
 
 }
 
-/* GDT Estilo general */
+/* Estilo general */
 * {
     margin: 0px;
     padding: 0px;
@@ -20,22 +18,17 @@
 
 header {
     display: flex;
-    /* GDT El logo y el nav bar en cada punta. Para pantallas chicas se cambia a space-evenly */
-    /* GDT Por ahí hay que cambiarlo si se ponen botones para ingresar o registrarse. */
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     margin-left: 0px;
     margin-right: 0px;
-
-    /* GDT Después cambiar imagen */
     background-image: url("https://www.stationeryhut.in/blog/wp-content/uploads/2015/10/office-stationery-banner.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-/* GDT ajuste el logo para mantener un tamaño apropiado para el uso de menu hamburguesa */
 .logo {
     width: 300px;
 }
@@ -44,7 +37,6 @@ header {
     width: 100%;
 }
 
-/* GDT Escondemos los botones */
 .boton-abierto,
 .boton-cerrado {
     display: none;
@@ -92,8 +84,8 @@ main {
     background-color: var(--varcolfondo);
 }
 
-/* GDT Media query para pantallas chicas (laptops, tables, teléfonos)
-No se nota mucho con el logo y navbar actual pero antes de mandarlos para abaja los cambia a space evenly*/
+/* GDT Media query para pantallas medianas (laptops, tables) */
+
 @media only screen and (max-width: 1024px) {
     header {
         justify-content: space-evenly;
@@ -184,7 +176,7 @@ input[type="radio"] {
     gap: 20px;
 }
 
-/* Media query para pantallas chicas (tables, teléfonos)*/
+/* Media query para pantallas chicas (teléfonos)*/
 @media only screen and (max-width: 768px) {
     .logo {
         width: 200px;
@@ -262,14 +254,23 @@ input[type="radio"] {
 
 /* ------------------------clases "INDEX INICIO"----------------------------------- */
 
-.titulito, h1 {
-    margin: 35px;
-    padding: 45px;
+.titulito,
+h1 {
+    margin: 10px 10px 10px;
     text-align: center;
     font-size: 35px;
     text-shadow: 1px 1px 2px black, 0 0 1em var(--varcol1), 0 0 0.2em var(--varcol1);
-   color: rgb(255, 255, 255);
-   
+    color: rgb(255, 255, 255);
+
+}
+
+p.titulito {
+    margin: 10px 10px 80px;
+    text-align: center;
+    font-size: 35px;
+    text-shadow: 1px 1px 2px black, 0 0 1em var(--varcol1), 0 0 0.2em var(--varcol1);
+    color: rgb(255, 255, 255);
+
 }
 
 .titulote {
@@ -280,8 +281,8 @@ input[type="radio"] {
     padding: 5px;
     text-align: center;
     text-shadow: 1px 1px 2px black, 0 0 1em var(--varcol1), 0 0 0.2em var(--varcol1);
-   color: rgb(193, 193, 193);
-   
+    color: rgb(193, 193, 193);
+
 }
 
 .inicio main {
@@ -290,15 +291,8 @@ input[type="radio"] {
 }
 
 .slider-frame {
-    /* GDT: Comenté el ancho porque no es responsive o adaptativo. En dispositivos chicos queda oculta y en dispositivos muy grandes queda con muhco padding.*/
-    /* width: 1280px; */
     width: auto;
-    /* GDT: No me gusta mucho que esté auto cuando las imágenes tienen distinto alto porque al ir cambiando de imagen, el resto de la página va "cambiando" de alto. 
-    Tal vez si las centranos no se note tanto, pero en principio le pongo un alto. */
-    /* height: auto; */
     height: 600px;
-    /* GDT: Puse el margen en 10 como en la página de contacto. Si lo cambiamos en 50, 10 o 0, hay que hacerlo también ahí. */
-    /* margin: 50px auto 0; */
     margin: 10px auto 0;
     overflow: hidden;
 }
@@ -365,12 +359,12 @@ input[type="radio"] {
 /* ------------ Manuales --------------*/
 
 .imgcontainer {
-
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 10px;
+    /* background-color: var(--varcolfondo); */
 }
 
 .imagesitem img {
@@ -384,43 +378,67 @@ input[type="radio"] {
     filter: opacity(0.5);
     transform: scale(1.05);
 }
+
 /* -------------SE AÑADE FONDO PLANO PARA OCULTAR BORDEADO BLANCO Y DISIMULAR CUADRICULAS DE FALSOS PNG------------------- */
-.planeBackgound{
+.planeBackgound {
     margin: 5px;
     padding: 5px;
     background-color: rgb(255, 255, 255);
 }
 
-img{
+img {
     max-width: 100%;
 }
-.grid{
+
+/* ------------- Ventas ------------------- */
+
+.contenedor {
+    margin: 10px 0 0 0;
+    padding: 10px;
+}
+
+.grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap:2rem;
+    gap: 2rem;
 }
 
-.producto{
-    background-color:#f37923;
+.producto {
+    background-color: #f37923;
 }
 
-.producto__imagen{
+.producto__imagen {
     width: 100%;
 }
 
-.producto__nombre{
+.producto__nombre {
     font-size: 25px;
     color: black;
     text-align: center;
-    
+
 }
 
-.producto__precio{
+.producto__informacion {
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+}
+
+.producto__informacion a {
     margin: 10px;
     padding: 10px;
     text-align: center;
     font-size: 20px;
     text-shadow: 1px 1px 2px black, 0 0 1em var(--varcol1), 0 0 0.2em var(--varcol1);
-   color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
 }
 
+/* Media query para pantallas chicas (teléfonos)*/
+@media only screen and (max-width: 768px) {
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+}
