ajuste margen footer

--- a/style.css
+++ b/style.css
@@ -99,7 +99,12 @@ footer {
     bottom: 0;
     width: 100%;
     height: 64px;
+    margin-top: auto;
 }
+
+main{
+    margin-bottom: 64px;
+    }
 
 .social-media {
     background: var(--varcol1);
